--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,14 @@
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.3",
+    "@metamask/detect-provider": "^2.0.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
     "@nomiclabs/hardhat-ethers": "^2.2.2",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@truffle/hdwallet-provider": "^2.1.9",
+    "axios": "^1.3.5",
     "dotenv": "^16.0.3",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
@@ -31,6 +33,7 @@
     "mocha": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-paginate": "^8.1.4",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.1",
