--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.0.3",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
+    "ganache-cli": "^6.12.2",
     "hardhat": "^2.12.6",
     "mocha": "^10.2.0",
     "react": "^18.2.0",
