--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "test": "mocha",
     "compile": "npx hardhat compile",
     "runharthat": "npx hardhat run scripts/run.js",
-    "deployharthat": "npx hardhat run scripts/deploy.js --network localhost"
+    "deployhardhat": "npx hardhat run scripts/deploy.js --network localhost"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
